@@ -1,52 +1,42 @@
 package io.github.mortuusars.chalk.advancement;
 
-import com.google.gson.JsonObject;
-import io.github.mortuusars.chalk.Chalk;
+import com.mojang.serialization.Codec;
+import com.mojang.serialization.codecs.RecordCodecBuilder;
 import net.minecraft.advancements.critereon.*;
 import net.minecraft.core.BlockPos;
-import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import org.jetbrains.annotations.NotNull;
 
 import java.util.List;
+import java.util.Optional;
 
 public class ConsecutiveSleepingTrigger extends SimpleCriterionTrigger<ConsecutiveSleepingTrigger.TriggerInstance> {
-    private static final ResourceLocation ID = Chalk.resource("consecutive_sleeping_pos");
-
     @Override
-    protected @NotNull TriggerInstance createInstance(JsonObject json, ContextAwarePredicate predicate, @NotNull DeserializationContext conditionsParser) {
-        return new TriggerInstance(predicate, MinMaxBounds.Ints.fromJson(json.get("count")), DistancePredicate.fromJson(json.get("distance")));
+    public @NotNull Codec<TriggerInstance> codec() {
+        return TriggerInstance.CODEC;
     }
 
     public void trigger(ServerPlayer player, PlayerSleepInfo sleepInfo) {
         this.trigger(player, triggerInstance -> triggerInstance.matches(player, sleepInfo));
     }
 
-    @Override
-    public @NotNull ResourceLocation getId() {
-        return ID;
-    }
+    public record TriggerInstance(Optional<ContextAwarePredicate> player, Optional<LocationPredicate> location,
+                                  MinMaxBounds.Ints count, DistancePredicate distance) implements SimpleCriterionTrigger.SimpleInstance {
+        public static final Codec<TriggerInstance> CODEC = RecordCodecBuilder.create(instance ->
+                instance.group(
+                                EntityPredicate.ADVANCEMENT_CODEC.optionalFieldOf("player").forGetter(TriggerInstance::player),
+                                LocationPredicate.CODEC.optionalFieldOf("location").forGetter(TriggerInstance::location),
+                                MinMaxBounds.Ints.CODEC.fieldOf("count").forGetter(TriggerInstance::count),
+                                DistancePredicate.CODEC.fieldOf("distance").forGetter(TriggerInstance::distance))
+                        .apply(instance, TriggerInstance::new));
 
-    public static class TriggerInstance extends AbstractCriterionTriggerInstance {
-        private final MinMaxBounds.Ints count;
-        private final DistancePredicate distance;
-
-        public TriggerInstance(ContextAwarePredicate predicate, MinMaxBounds.Ints count, DistancePredicate distance) {
-            super(ConsecutiveSleepingTrigger.ID, predicate);
-            this.count = count;
-            this.distance = distance;
-        }
-
-        @Override
-        public @NotNull JsonObject serializeToJson(@NotNull SerializationContext conditions) {
-            JsonObject jsonObject = super.serializeToJson(conditions);
-            jsonObject.add("count", count.serializeToJson());
-            jsonObject.add("distance", distance.serializeToJson());
-            return jsonObject;
-        }
-
-        @SuppressWarnings("unused")
         public boolean matches(ServerPlayer player, PlayerSleepInfo sleepInfo) {
+            boolean locationMatches = this.location.map(p ->
+                    p.matches(player.serverLevel(), player.getX(), player.getY(), player.getZ())).orElse(true);
+            if (!locationMatches) {
+                return false;
+            }
+
             List<BlockPos> sleepPositions = sleepInfo.sleepPositions();
 
             if (sleepPositions.isEmpty())
@@ -54,11 +44,11 @@ public class ConsecutiveSleepingTrigger extends SimpleCriterionTrigger<Consecuti
             else if (sleepPositions.size() == 1)
                 return count.matches(1);
 
-            BlockPos lastSleepPos = sleepPositions.get(sleepPositions.size() - 1);
+            BlockPos lastSleepPos = sleepPositions.getLast();
 
             int matchedDistanceCount = 1;
 
-            for (int i = sleepPositions.size() - 2; i >= 0 ; i--) {
+            for (int i = sleepPositions.size() - 2; i >= 0; i--) {
                 BlockPos pos = sleepPositions.get(i);
 
                 if (distance.matches(lastSleepPos.getX(), lastSleepPos.getY(), lastSleepPos.getZ(),
